--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -104,7 +104,7 @@ $navbar-bg: #cef274;
     font-weight: bold;
 }
 
-.navbar {
+.header > .navbar {
     background-color: $navbar-bg;
     border: 1px solid #bada55;
 }
