changed main menu href format, and some logging output in the main router

--- a/app/scripts/templates/app-main.ejs
+++ b/app/scripts/templates/app-main.ejs
@@ -1,7 +1,7 @@
 <ul class="nav nav-tabs">
-  <li><a href="/items">Assets</a></li>
-  <li class="active"><a href="/employees">Employee</a></li>
-  <li><a href="/inventory-reports">Inventory Reports</a></li>
+  <li><a href="/#assets">Assets</a></li>
+  <li class="active"><a href="/#employees">Employee</a></li>
+  <li><a href="/#inventory-reports">Inventory Reports</a></li>
 </ul>
 
 <div class="content-section">
