--- a/app/scripts/templates/app.ejs
+++ b/app/scripts/templates/app.ejs
@@ -3,9 +3,13 @@
     <% var title = model.get('title') === undefined ? 'ais' : model.get('title'); %>
     <a href="/" class="main-title navbar-brand"><%= title %></a>
     <ul class="nav navbar-nav navbar-right">
-      <!--<li><a href="/home"><span class="glyphicon glyphicon-list"></span> Dashboard</a></li>-->
-      <li><a href="/account"><span class="glyphicon glyphicon-user"></span> Account Settings</a></li>
-      <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
+      <% if (model.get('user')) { %>
+        <li><p class="navbar-text navbar-right">Logged in as <strong>Elizar Pepino</strong></p></li>
+        <li><a href="/account"><span class="glyphicon glyphicon-cog"></span> Account Settings</a></li>
+        <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
+      <% } else { %>
+          <li><p class="navbar-text navbar-right">You are currently not <strong>Logged In </strong></p></li>
+      <% } %>
     </ul>
   </nav>
 </header>
@@ -18,7 +22,7 @@
 
 <div class="footer">
   <div class="container">
-    <p class="muted credit pull-left">Copyright 2013 <a href="http://globalzeal.net">Global Zeal</a> and <a href="http://wayuk.com/">Tribu Wayuk</a>.</p>
-    <p class="muted credit pull-right"><a href="/Help">Help</a> / <a href="/faq">FAQ</a> / <a href="/tos">Contact Us</a></p>
+    <p class="muted credit pull-left">Copyright 2013 <a href="<%= model.get('company').url %>"><%= model.get('company').name %></a> and <a href="<%= model.get('team').url %>"><%= model.get('team').name %></a>.</p>
+    <p class="muted credit pull-right"><a href="/help">Help</a> / <a href="/faq">FAQ</a> / <a href="/tos">Contact Us</a></p>
   </div>
 </div>
