--- a/app/scripts/templates/employees.ejs
+++ b/app/scripts/templates/employees.ejs
@@ -1,31 +1,63 @@
-<h1>Employees</h1>
-<table class="table">
+<hr>
+<h2>Manage Employees</h2>
+<hr>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>#</th>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Username</th>
+      <th>Assets</th>
+      <th>Full Name</th>
+      <th>Date of Birth</th>
+      <th>Email</th>
+      <th>User Role</th>
+      <th>Date Employed</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>1</td>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
+    <tr class="employee-entry">
       <td>3</td>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
+      <td>Elizar Pepino</td>
+      <td>03/20/1985</td>
+      <td>elizar.pepino@globalzeal.net</td>
+      <td>admin</td>
+      <td>11/01/2013</td>
+      <td>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="View Details" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-search"> </span></button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Edit" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-edit"> </span></button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Reset Password" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-lock"> </span></button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip"> &nbsp;x&nbsp; </button>
+      </td>
+    </tr>
+    <tr class="employee-entry">
+      <td>1337</td>
+      <td>Tibur Sho</td>
+      <td>02/30/1945</td>
+      <td>tibur.sho@globalzeal.net</td>
+      <td>custodian</td>
+      <td>12/25/2013</td>
+      <td>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="View Details" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-search"> </span></button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Edit" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-edit"> </span></button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Reset Password" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-lock"> </span></button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip"> &nbsp;x&nbsp; </button>
+      </td>
+    </tr>
+    <tr class="employee-entry">
+      <td>143</td>
+      <td>John Doe</td>
+      <td>01/01/1901</td>
+      <td>john.doe@globalzeal.net</td>
+      <td>employee</td>
+      <td>12/30/2013</td>
+      <td>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="View Details" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-search"> </span></button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Edit" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-edit"> </span></button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Reset Password" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-lock"> </span></button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip"> &nbsp;x&nbsp; </button>
+      </td>
     </tr>
   </tbody>
 </table>
+<script>
+  $('.tool-tip').tooltip();
+</script>
