made some modifications on the employees template and also the main.scss

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -125,7 +125,7 @@ $navbar-bg: #cef274;
         
         &.active > a {
             background-color: #CEF274 !important;
-            color: #779b14;
+            color: #779b14 !important;
         }
 
         & > a {
