--- a/app/scripts/templates/employees.ejs
+++ b/app/scripts/templates/employees.ejs
@@ -1,5 +1,18 @@
-<hr>
+<br>
 <h2>Manage Employees</h2>
+<hr>
+<div class="row">
+  <div class="col-xs-12 col-md-8">
+    <div class="btn-group assignment-filter">
+      <button type="button" class="btn btn-default all">All</button>
+      <button type="button" class="btn btn-default assigned">Assigned</button>
+      <button type="button" class="btn btn-default not-assigned">Not Assigned</button>
+    </div>
+  </div>
+  <div class="col-xs-6 col-md-4">
+    <a href="/assets/add" class="btn btn-add pull-right"><span class="glyphicon glyphicon-plus-sign"></span> Add New </a>
+  </div>
+</div>
 <hr>
 <table class="table table-striped">
   <thead>
