added inventory-reports view and refactored main router

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -148,3 +148,9 @@ $navbar-bg: #cef274;
     }
   }
 }
+
+.dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
+    background-color: transparent;
+    color: #000000;
+    font-weight: bold;
+}
