--- a/app/scripts/templates/assets.ejs
+++ b/app/scripts/templates/assets.ejs
@@ -3,11 +3,18 @@
 <hr>
 <div class="row">
   <div class="col-xs-12 col-md-8">
-  	<div class="btn-group assignment-filter">
-  	  <button type="button" class="btn btn-default all">All</button>
-  	  <button type="button" class="btn btn-default assigned">Assigned</button>
-  	  <button type="button" class="btn btn-default not-assigned">Not Assigned</button>
-  	</div>
+  	<div class="btn-group filters">
+      <button type="button" class="btn btn-default" disabled="disabled">Show All</button>
+      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+        <span class="caret"></span>
+        <span class="sr-only">Toggle Dropdown</span>
+      </button>
+      <ul class="dropdown-menu" role="menu">
+        <li class="active"><a href="#">All</a></li>
+        <li><a href="#">Assigned</a></li>
+        <li><a href="#">Not Assigned</a></li>
+      </ul>
+    </div>
   </div>
   <div class="col-xs-6 col-md-4">
   	<a href="/assets/add" class="btn btn-add pull-right"><span class="glyphicon glyphicon-plus-sign"></span> Add New </a>
