--- a/app/scripts/templates/assets.ejs
+++ b/app/scripts/templates/assets.ejs
@@ -3,21 +3,90 @@
 <hr>
 <div class="row">
   <div class="col-xs-12 col-md-8">
-  	<div class="btn-group filters">
-      <button type="button" class="btn btn-default" disabled="disabled">Show All</button>
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-        <span class="caret"></span>
-        <span class="sr-only">Toggle Dropdown</span>
-      </button>
-      <ul class="dropdown-menu" role="menu">
-        <li class="active"><a href="#">All</a></li>
-        <li><a href="#">Assigned</a></li>
-        <li><a href="#">Not Assigned</a></li>
-      </ul>
+  	<div class="filters">
+      <select class="assets-filter">
+        <option value="all">View all</option>
+        <option value="assigned">View Assigned</option>
+        <option value="not-assigned">View Not Assigned</option>
+      </select>
+      <script>
+        $('.assets-filter').selectpicker();
+      </script>
     </div>
   </div>
   <div class="col-xs-6 col-md-4">
-  	<a href="/assets/add" class="btn btn-add pull-right"><span class="glyphicon glyphicon-plus-sign"></span> Add New </a>
+  	<button  class="btn btn-add pull-right" data-toggle="modal" data-target="#add-modal"><span class="glyphicon glyphicon-plus-sign"></span> New Asset </button>
+    <!-- Modal -->
+    <div class="modal fade" id="add-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header panel-primary">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h2 class="modal-title" id="myModalLabel">Add New Asset</h2>
+          </div>
+          <div class="modal-body">
+            
+            <!-- FORM -->
+            <form role="form">
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name">
+              </div>
+              <div class="form-group">
+                <label for="description">Description</label>
+                <textarea class="form-control" id="description"></textarea>
+              </div>
+              <div class="form-group row">
+                <div class="col-xs-6">
+                  <label for="type">Type</label>
+                  <input type="text" class="form-control" id="type" placeholder="e.g., Printer, Laptop">
+                </div>
+                <div class="col-xs-6">
+                  <label for="date-purchased">Date Purchased</label>
+                  <input type="text" class="form-control date-purchased">
+                  <script>
+                    $('.date-purchased').datepicker();
+                  </script>
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-xs-6">
+                  <label for="status">Status</label>
+                  <select class="status-picker">
+                    <option>Working</option>
+                    <option>Defective</option>
+                  </select>
+                  <script>
+                    $('.status-picker').selectpicker();
+                  </script>
+                </div>
+                <div class="col-xs-6">
+                  <label for="serial-number">Serial Number</label>
+                  <input type="text" class="form-control" id="serial-number">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="supplier">Supplier</label>
+                <input type="text" class="form-control" id="supplier">
+              </div>
+              <div class="form-group">
+                <label for="purchase-reason">Reason for Purchase?</label>
+                <textarea class="form-control" id="purchase-reason"></textarea>
+              </div>
+              <div class="form-group">
+                
+              </div>
+            </form>
+            <!-- FORM END -->
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-save">Save Changes</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
   </div>
 </div>
 <hr>
