--- a/app/scripts/templates/employees.ejs
+++ b/app/scripts/templates/employees.ejs
@@ -3,22 +3,104 @@
 <hr>
 <div class="row">
   <div class="col-xs-12 col-md-8">
-    <div class="btn-group filters">
-      <button type="button" class="btn btn-default" disabled="disabled">Show All</button>
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-        <span class="caret"></span>
-        <span class="sr-only">Toggle Dropdown</span>
-      </button>
-      <ul class="dropdown-menu" role="menu">
-        <li class="active"><a href="#">All</a></li>
-        <li><a href="#">Admins</a></li>
-        <li><a href="#">Custodians</a></li>
-        <li><a href="#">Employees</a></li>
-      </ul>
+    <div class="filters">
+      <select class="employees-filter">
+        <option value="all">View all</option>
+        <option value="assigned">View Admins</option>
+        <option value="not-assigned">View Custodians</option>
+        <option value="not-assigned">View Employees</option>
+      </select>
+      <script>
+        $('.employees-filter').selectpicker();
+      </script>
     </div>
   </div>
   <div class="col-xs-6 col-md-4">
-    <a href="/assets/add" class="btn btn-add pull-right"><span class="glyphicon glyphicon-plus-sign"></span> New Employee </a>
+    <button  class="btn btn-add pull-right" data-toggle="modal" data-target="#add-modal"><span class="glyphicon glyphicon-plus-sign"></span> New Employee </button>
+    <!-- Modal -->
+    <div class="modal fade" id="add-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header panel-primary">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h2 class="modal-title" id="myModalLabel">Add New Employee</h2>
+          </div>
+          <div class="modal-body">
+            
+            <!-- FORM -->
+            <form role="form">
+              <div class="form-group row">
+                <div class="col-xs-4">
+                  <label for="firstname">First Name</label>
+                  <input type="text" class="form-control" id="firstname">
+                </div>
+                <div class="col-xs-4">
+                  <label for="middlename">Middle Name</label>
+                  <input type="text" class="form-control" id="middlename">
+                </div>
+                <div class="col-xs-4">
+                  <label for="lastname">Last Name</label>
+                  <input type="text" class="form-control" id="lastname">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="description">Address</label>
+                <input type="text" class="form-control" id="address">
+              </div>
+              <div class="form-group row">
+                <div class="col-xs-6">
+                  <label for="status">Gender</label>
+                  <select class="gender-picker">
+                    <option>Male</option>
+                    <option>Female</option>
+                  </select>
+                  <script>
+                    $('.gender-picker').selectpicker();
+                  </script>
+                </div>
+                <div class="col-xs-6">
+                  <label for="birthdate">Date of Birth</label>
+                  <input type="text" class="form-control birthdate">
+                  <script>
+                    $('.birthdate').datepicker();
+                  </script>
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="col-xs-6">
+                  <label for="status">User Role</label>
+                  <select class="role-picker">
+                    <option>Admin</option>
+                    <option>Custodian</option>
+                    <option>Employee</option>
+                  </select>
+                  <script>
+                    $('.role-picker').selectpicker();
+                  </script>
+                </div>
+                <div class="col-xs-6">
+                  <label for="employeddate">Date Employed</label>
+                  <input type="text" class="form-control employeddate">
+                  <script>
+                    $('.employeddate').datepicker();
+                  </script>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="email">Email Address</label>
+                <input type="text" class="form-control" id="email" placeholder="you@domain.com">
+              </div>
+            </form>
+            <!-- FORM END -->
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-save">Save Changes</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
   </div>
 </div>
 <hr>
