--- a/app/scripts/templates/employees.ejs
+++ b/app/scripts/templates/employees.ejs
@@ -88,7 +88,7 @@
               </div>
               <div class="form-group">
                 <label for="email">Email Address</label>
-                <input type="text" class="form-control" id="email" placeholder="you@domain.com">
+                <input type="text" class="form-control" id="email" placeholder="name@globalzeal.net">
               </div>
             </form>
             <!-- FORM END -->
