--- a/app/scripts/templates/assets.ejs
+++ b/app/scripts/templates/assets.ejs
@@ -5,7 +5,7 @@
   <div class="col-xs-12 col-md-8">
   	<div class="filters">
       <select class="assets-filter">
-        <option value="all">View all</option>
+        <option value="all">View All</option>
         <option value="assigned">View Assigned</option>
         <option value="not-assigned">View Not Assigned</option>
       </select>
