--- a/app/scripts/templates/employees.ejs
+++ b/app/scripts/templates/employees.ejs
@@ -5,7 +5,7 @@
   <div class="col-xs-12 col-md-8">
     <div class="filters">
       <select class="employees-filter">
-        <option value="all">View all</option>
+        <option value="all">View All</option>
         <option value="assigned">View Admins</option>
         <option value="not-assigned">View Custodians</option>
         <option value="not-assigned">View Employees</option>
