This fixes issue #10

--- a/app/scripts/templates/login-form.ejs
+++ b/app/scripts/templates/login-form.ejs
@@ -1,6 +1,6 @@
 <div class="col-sm-8 col-sm-offset-2">
   <div class="panel panel-default">
-    <div class="panel-heading"><h4>Asset Inventory Login</h4></div>
+    <div class="panel-heading"><h4>User Login</h4></div>
     <div class="panel-body">
       <form action="/" method="POST" class="form-horizontal login-form" role="form">
       <div class="form-group">
