--- a/app/scripts/templates/assets.ejs
+++ b/app/scripts/templates/assets.ejs
@@ -3,7 +3,7 @@
 <hr>
 <div class="row">
   <div class="col-xs-12 col-md-8">
-  	<div class="filters">
+    <div class="filters">
       <select class="assets-filter">
         <option value="all">View All</option>
         <option value="assigned">View Assigned</option>
@@ -15,17 +15,17 @@
     </div>
   </div>
   <div class="col-xs-6 col-md-4">
-  	<button  class="btn btn-add pull-right" data-toggle="modal" data-target="#add-modal"><span class="glyphicon glyphicon-plus-sign"></span> New Asset </button>
+    <button  class="btn btn-add pull-right" data-toggle="modal" data-target="#add-modal"><span class="glyphicon glyphicon-plus-sign"></span> New Asset </button>
     <!-- Modal -->
     <div class="modal fade" id="add-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="modal-header panel-primary">
+	  <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h2 class="modal-title" id="myModalLabel">Add New Asset</h2>
+	    <h4 class="modal-title" id="myModalLabel">Add New Asset</h4>
           </div>
           <div class="modal-body">
-            
+
             <!-- FORM -->
             <form role="form">
               <div class="form-group">
@@ -74,15 +74,15 @@
                 <textarea class="form-control" id="purchase-reason"></textarea>
               </div>
               <div class="form-group">
-                
+
               </div>
             </form>
             <!-- FORM END -->
 
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-save">Save Changes</button>
+	    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+	    <button type="button" class="btn btn-add"><span class="glyphicon glyphicon-ok-sign"></span> Save Changes</button>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
