--- a/app/scripts/templates/employees.ejs
+++ b/app/scripts/templates/employees.ejs
@@ -21,12 +21,12 @@
     <div class="modal fade" id="add-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="modal-header panel-primary">
+	  <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h2 class="modal-title" id="myModalLabel">Add New Employee</h2>
+	    <h4 class="modal-title" id="myModalLabel">Add New Employee</h4>
           </div>
           <div class="modal-body">
-            
+
             <!-- FORM -->
             <form role="form">
               <div class="form-group row">
@@ -95,8 +95,8 @@
 
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-save">Save Changes</button>
+	    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+	    <button type="button" class="btn btn-add"><span class="glyphicon glyphicon-ok-sign"></span> Save Changes</button>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
