--- a/app/scripts/templates/employees.ejs
+++ b/app/scripts/templates/employees.ejs
@@ -11,24 +11,25 @@
         <option value="not-assigned">View Employees</option>
       </select>
       <script>
-        $('.employees-filter').selectpicker();
+      $('.employees-filter').selectpicker();
       </script>
     </div>
   </div>
   <div class="col-xs-6 col-md-4">
-    <button  class="btn btn-add pull-right" data-toggle="modal" data-target="#add-modal"><span class="glyphicon glyphicon-plus-sign"></span> New Employee </button>
+    <button class="btn btn-add pull-right" data-toggle="modal" data-target="#add-modal">
+      <span class="glyphicon glyphicon-plus-sign"></span>New Employee</button>
     <!-- Modal -->
     <div class="modal fade" id="add-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-	  <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	    <h4 class="modal-title" id="myModalLabel">Add New Employee</h4>
-          </div>
-          <div class="modal-body">
+          <!-- FORM -->
+          <form role="form">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+              <h4 class="modal-title" id="myModalLabel">Add New Employee</h4>
+            </div>
+            <div class="modal-body">
 
-            <!-- FORM -->
-            <form role="form">
               <div class="form-group row">
                 <div class="col-xs-4">
                   <label for="firstname">First Name</label>
@@ -75,14 +76,14 @@
                     <option>Employee</option>
                   </select>
                   <script>
-                    $('.role-picker').selectpicker();
+                  $('.role-picker').selectpicker();
                   </script>
                 </div>
                 <div class="col-xs-6">
                   <label for="employeddate">Date Employed</label>
                   <input type="text" class="form-control employeddate">
                   <script>
-                    $('.employeddate').datepicker();
+                  $('.employeddate').datepicker();
                   </script>
                 </div>
               </div>
@@ -90,17 +91,21 @@
                 <label for="email">Email Address</label>
                 <input type="text" class="form-control" id="email" placeholder="name@globalzeal.net">
               </div>
-            </form>
-            <!-- FORM END -->
 
-          </div>
-          <div class="modal-footer">
-	    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-	    <button type="button" class="btn btn-add"><span class="glyphicon glyphicon-ok-sign"></span> Save Changes</button>
-          </div>
-        </div><!-- /.modal-content -->
-      </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+              <button type="submit" class="btn btn-add">
+                <span class="glyphicon glyphicon-ok-sign"></span>Save Changes</button>
+            </div>
+          </form>
+          <!-- FORM END -->
+        </div>
+        <!-- /.modal-content -->
+      </div>
+      <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
   </div>
 </div>
 <hr>
@@ -125,10 +130,16 @@
       <td>admin</td>
       <td>11/01/2013</td>
       <td>
-        <button type="button" data-toggle="tooltip" data-placement="bottom" title="View Details" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-search"> </span></button>
-        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Edit" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-edit"> </span></button>
-        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Reset Password" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-lock"> </span></button>
-        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip"> &nbsp;x&nbsp; </button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="View Details" class="btn btn-default btn-xs tool-tip">
+          <span class="glyphicon glyphicon-search"></span>
+        </button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Edit" class="btn btn-default btn-xs tool-tip">
+          <span class="glyphicon glyphicon-edit"></span>
+        </button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Reset Password" class="btn btn-default btn-xs tool-tip">
+          <span class="glyphicon glyphicon-lock"></span>
+        </button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip">&nbsp;x&nbsp;</button>
       </td>
     </tr>
     <tr class="employee-entry">
@@ -139,10 +150,16 @@
       <td>custodian</td>
       <td>12/25/2013</td>
       <td>
-        <button type="button" data-toggle="tooltip" data-placement="bottom" title="View Details" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-search"> </span></button>
-        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Edit" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-edit"> </span></button>
-        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Reset Password" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-lock"> </span></button>
-        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip"> &nbsp;x&nbsp; </button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="View Details" class="btn btn-default btn-xs tool-tip">
+          <span class="glyphicon glyphicon-search"></span>
+        </button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Edit" class="btn btn-default btn-xs tool-tip">
+          <span class="glyphicon glyphicon-edit"></span>
+        </button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Reset Password" class="btn btn-default btn-xs tool-tip">
+          <span class="glyphicon glyphicon-lock"></span>
+        </button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip">&nbsp;x&nbsp;</button>
       </td>
     </tr>
     <tr class="employee-entry">
@@ -153,14 +170,20 @@
       <td>employee</td>
       <td>12/30/2013</td>
       <td>
-        <button type="button" data-toggle="tooltip" data-placement="bottom" title="View Details" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-search"> </span></button>
-        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Edit" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-edit"> </span></button>
-        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Reset Password" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-lock"> </span></button>
-        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip"> &nbsp;x&nbsp; </button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="View Details" class="btn btn-default btn-xs tool-tip">
+          <span class="glyphicon glyphicon-search"></span>
+        </button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Edit" class="btn btn-default btn-xs tool-tip">
+          <span class="glyphicon glyphicon-edit"></span>
+        </button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Reset Password" class="btn btn-default btn-xs tool-tip">
+          <span class="glyphicon glyphicon-lock"></span>
+        </button>
+        <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip">&nbsp;x&nbsp;</button>
       </td>
     </tr>
   </tbody>
 </table>
 <script>
-  $('.tool-tip').tooltip();
+$('.tool-tip').tooltip();
 </script>
