--- a/app/scripts/templates/app.ejs
+++ b/app/scripts/templates/app.ejs
@@ -1,3 +1,4 @@
+<% if(model) { %>
 <header class="header">
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <% var title = model.get('title') === undefined ? 'ais' : model.get('title'); %>
@@ -26,3 +27,4 @@
     <p class="muted credit pull-right"><a href="/help">Help</a> / <a href="/faq">FAQ</a> / <a href="/tos">Contact Us</a></p>
   </div>
 </div>
+<% } %>
