--- a/app/scripts/templates/asset.ejs
+++ b/app/scripts/templates/asset.ejs
@@ -1,2 +1,18 @@
-<p>Your content here.</p>
-
+<tr class="employee-entry">
+  <td><%= itemName %></td>
+  <td><%= itemAsignee %></td>
+  <td><%= itemType %></td>
+  <td><%= itemSerialNumber %></td>
+  <td><%= itemDatePurchased %></td>
+  <td><%= itemSupplier %></td>
+  <td><%= itemStatus %></td>
+  <td>
+    <button type="button" data-toggle="tooltip" data-placement="bottom" title="Edit" class="btn btn-default btn-xs tool-tip">
+      <span class="glyphicon glyphicon-edit"></span>
+    </button>
+    <button type="button" data-toggle="tooltip" data-placement="bottom" title="Assign" class="btn btn-default btn-xs tool-tip">
+      <span class="glyphicon glyphicon-hand-up"></span>
+    </button>
+    <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip">&nbsp;x&nbsp;</button>
+  </td>
+</tr>
