--- a/app/scripts/templates/employee.ejs
+++ b/app/scripts/templates/employee.ejs
@@ -1,14 +1,20 @@
 <tr class="employee-entry">
-  <td>Macbook Pro Retina</td>
-  <td>Tibur Sho</td>
-  <td>Laptop</td>
-  <td>1920CHAHH2</td>
-  <td>01/01/2013</td>
-  <td>Apple Inc.</td>
-  <td>Working</td>
+  <td>3</td>
+  <td><%= model.get('first_name') + ' ' + model.get('middle_name') + ' ' + model.get('last_name') %></td>
+  <td><%= model.get('date_of_birth') %></td>
+  <td><%= model.get('email') %></td>
+  <td><%= model.get('user_role') %></td>
+  <td><%= model.get('date_employed') %></td>
   <td>
-    <button type="button" data-toggle="tooltip" data-placement="bottom" title="Edit" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-edit"> </span></button>
-    <button type="button" data-toggle="tooltip" data-placement="bottom" title="Assign" class="btn btn-default btn-xs tool-tip"><span class="glyphicon glyphicon-hand-up"> </span></button>
-    <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip"> &nbsp;x&nbsp; </button>
+    <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip" data-original-title="View Details">
+      <span class="glyphicon glyphicon-search"></span>
+    </button>
+    <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip" data-original-title="Edit">
+      <span class="glyphicon glyphicon-edit"></span>
+    </button>
+    <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip" data-original-title="Reset Password">
+      <span class="glyphicon glyphicon-lock"></span>
+    </button>
+    <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-danger btn-xs tool-tip" data-original-title="Delete">&nbsp;x&nbsp;</button>
   </td>
 </tr>
