--- a/app/scripts/templates/assets.ejs
+++ b/app/scripts/templates/assets.ejs
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-xs-6">
                   <label for="date-purchased">Date Purchased</label>
-                  <input type="text" class="form-control date-purchased">
+                  <input type="text" id="date-purchased" class="form-control date-purchased">
                   <script>
                     $('.date-purchased').datepicker();
                   </script>
@@ -53,7 +53,7 @@
               <div class="form-group row">
                 <div class="col-xs-6">
                   <label for="status">Status</label>
-                  <select class="status-picker">
+                  <select id="status" class="status-picker">
                     <option>Working</option>
                     <option>Defective</option>
                   </select>
@@ -78,7 +78,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn btn-add">
+              <button type="submit" class="btn btn-add" id='save_asset'>
                 <span class="glyphicon glyphicon-ok-sign"></span>Save Changes</button>
             </div>
           </form>
@@ -92,7 +92,7 @@
   </div>
 </div>
 <hr>
-<table class="table table-striped">
+<table class="table table-striped" id='asset_list'>
   <thead>
     <tr>
       <th>Name</th>
@@ -165,3 +165,9 @@
 <script>
   $('.tool-tip').tooltip();
 </script>
+
+<style>
+.mali {
+  border-color: 'red';
+}
+</style>
