fixed tooltip issue, and removed unecessary console logging

--- a/app/scripts/templates/employee.ejs
+++ b/app/scripts/templates/employee.ejs
@@ -16,3 +16,6 @@
   </button>
   <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-danger btn-xs tool-tip" data-original-title="Delete">&nbsp;x&nbsp;</button>
 </td>
+<script>
+  $('.tool-tip').tooltip();
+</script>
