--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -111,7 +111,7 @@ $navbar-bg: #cef274;
     border: 1px solid #bada55;
 }
 
-.btn-add {
+.btn-add, .btn-edit, .btn-reset{
   color: #ffffff;
   font-weight: bold;
   border-color: #ef5b00 !important;
