--- a/app/scripts/templates/employee.ejs
+++ b/app/scripts/templates/employee.ejs
@@ -8,10 +8,10 @@
   <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip viewEetails" data-original-title="View Details">
     <span class="glyphicon glyphicon-search"></span>
   </button>
-  <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip editEmployee" data-original-title="Edit">
+  <button type="button" data-toggle="modal" data-target="#edit-modal" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip editEmployee" data-original-title="Edit">
     <span class="glyphicon glyphicon-edit"></span>
   </button>
-  <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip resetPassword" data-original-title="Reset Password">
+  <button type="button" data-toggle="modal" data-target="#reset-modal" data-placement="bottom" title="" class="btn btn-default btn-xs tool-tip resetPassword" data-original-title="Reset Password">
     <span class="glyphicon glyphicon-lock"></span>
   </button>
   <button type="button" data-toggle="tooltip" data-placement="bottom" title="" class="btn btn-danger btn-xs tool-tip deleteEmployee" data-original-title="Delete">&nbsp;x&nbsp;</button>
