--- a/app/scripts/templates/employees.ejs
+++ b/app/scripts/templates/employees.ejs
@@ -96,7 +96,7 @@
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
               <button type="submit" class="btn btn-add">
-                <span class="glyphicon glyphicon-ok-sign"></span> Add </button>
+                <span class="glyphicon glyphicon-ok-sign"></span> Add Employee </button>
             </div>
           </form>
           <!-- FORM END -->
