--- a/app/scripts/templates/employee.ejs
+++ b/app/scripts/templates/employee.ejs
@@ -1,4 +1,4 @@
-<td>3</td>
+<td><%= model.get('assets') %></td>
 <td><%= model.get('first_name') + ' ' + model.get('middle_name') + ' ' + model.get('last_name') %></td>
 <td><%= model.get('date_of_birth') %></td>
 <td><%= model.get('email') %></td>
