--- a/app/scripts/templates/asset.ejs
+++ b/app/scripts/templates/asset.ejs
@@ -1,18 +1,16 @@
-<tr class="employee-entry">
-  <td><%= itemName %></td>
-  <td><%= itemAsignee %></td>
-  <td><%= itemType %></td>
-  <td><%= itemSerialNumber %></td>
-  <td><%= itemDatePurchased %></td>
-  <td><%= itemSupplier %></td>
-  <td><%= itemStatus %></td>
-  <td>
-    <button type="button" data-toggle="tooltip" data-placement="bottom" title="Edit" class="btn btn-default btn-xs tool-tip">
-      <span class="glyphicon glyphicon-edit"></span>
-    </button>
-    <button type="button" data-toggle="tooltip" data-placement="bottom" title="Assign" class="btn btn-default btn-xs tool-tip">
-      <span class="glyphicon glyphicon-hand-up"></span>
-    </button>
-    <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip">&nbsp;x&nbsp;</button>
-  </td>
-</tr>
+<td><%= model.get('asset_name') %></td>
+<td></td>
+<td><%= model.get('asset_type') %></td>
+<td><%= model.get('serial_number') %></td>
+<td><%= model.get('date_purchased') %></td>
+<td><%= model.get('supplier') %></td>
+<td><%= model.get('status') %></td>
+<td>
+  <button type="button" data-toggle="tooltip" data-placement="bottom" title="Edit" class="btn btn-default btn-xs tool-tip">
+    <span class="glyphicon glyphicon-edit"></span>
+  </button>
+  <button type="button" data-toggle="tooltip" data-placement="bottom" title="Assign" class="btn btn-default btn-xs tool-tip">
+    <span class="glyphicon glyphicon-hand-up"></span>
+  </button>
+  <button type="button" data-toggle="tooltip" data-placement="bottom" title="Delete" class="btn btn-danger btn-xs tool-tip">&nbsp;x&nbsp;</button>
+</td>
